# school-project

./: .gitignore  CMakeLists.txt  bmp280.c  bmp280.c.2  bmp280.h  config.h  lora.c  lora.h  main.c  mikrobi-cansat.c  readme.md  temp_pinout.txt
.github/workflows/: windows-build.yml
airbone/: airbone.ino
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
lora_rx/: lora_rx.ino
v2/airbone/: airbone.ino
v2/lora_rx/: lora_rx.ino
v2/sd_camera/: sd_camera.ino
